# cpp-template-event-system

./: CMakeLists.txt  circular.h  event.h  main.cpp  statics.h  test.cbp  test.depend  test.layout
include/: background.h  buffer.h  circular.h  event.h  handler.h  stack.h  statics.h
src/: main.cpp
test/: test.cpp  test_aux.h  test_circular.h  test_stack.h
